--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: firebase deploy
+      # - run: 
+      - run: firebase init hosting
+      - run: firebase deploy --only hosting
     
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
