--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - run: 
+      - run: npm install -g firebase-tools
       - run: firebase init hosting
       - run: firebase deploy --only hosting
     
